# rlvr-batna

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml
configs/: eval.yaml  train.yaml
data/ahp/: automotive.json  baby-products.json  beauty.json  books.json  electronics.json  health-personal-care.json  home-kitchen.json  industrial-scientific.json  movies-tv.json  music.json  other.json  patio-lawn-garden.json  pet-supplies.json  software.json  sports-outdoors.json  tools-home-improvement.json  toys-games.json  video-games.json
data/ahp/test/: ahp.test.json
data/ahp/train/: ahp.train.json
data/casino/: ca.test.csv
data/dnd/: dnd.test.csv  dnd.train.csv
emnlp-submission/: Makefile  paper.tex
emnlp-submission/conversations/: casino_episode_64.txt
emnlp-submission/files/: changelog.md
ijpr-submission/: paper.tex  references.bib  template.tex
report/: acl.sty  paper.tex  references.bib
report/conversations/: cra_episode_2.txt  ji_episode_32.txt
scripts/: find_examples.py  gen_figures.py  gen_figures_emnlp.py  gen_figures_ijpr.py  serve_checkpoints.py  split_ahp.py  tau_ablation.py
src/: envs.py  prompts.py  train.py
src/eval/: display.py  generator.py  harness.py  render.py  runner.py
