[project]
name = "rlvr-batna"
version = "0.1.0"
description = "BATNA Aware RL for Negotiation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chz>=0.4.0",
    "loguru>=0.7.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.0.0",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tinker>=0.19.0",
    "tinker-cookbook>=0.3.0",
    "tqdm>=4.67.3",
    "wandb>=0.19.0",
]
